# handwritten_character_recognition

./: .gitignore  LICENSE  main.html  poetry.ps1  pyproject.toml  server.py  train.py  training.ipynb
training_results/: best_hyperparameters_10_epochs.json
